Addressed Thomas' suggestion and changed from System.exit(0) to application.dispose().
Now when the user successfully creates/deletes a flashcard set, or cancels the process, the whole program shouldn't exit, but only for my use case.